# p3-tests

./: README.md  pyproject.toml  sdmx.ipynb  xbrl.ipynb  xbrl_utils.py
SDMX/: km1_data_sdmx.csv  km1_data_sdmx.xml  km1_structures.xml
XBRL/: README.md  bas3-km1_v1.xsd  km1-cal.xml  km1-def.xml  km1-instance-example-facts.csv  km1-instance-example-metadata.json  km1-instance-example.json  km1-instance-example.xml  km1-labels.xml  km1-pre.xml
output/: sdmx_df.csv  xbrl_df.csv
